[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.9.0"
good_lp = "1.14.2"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "day_1"
harness = false

[[bench]]
name = "day_2"
harness = false

[[bench]]
name = "day_3"
harness = false

[[bench]]
name = "day_4"
harness = false

[[bench]]
name = "day_5"
harness = false

[[bench]]
name = "day_6"
harness = false

[[bench]]
name = "day_7"
harness = false

[[bench]]
name = "day_8"
harness = false

[[bench]]
name = "day_9"
harness = false

[[bench]]
name = "day_10"
harness = false